# market-prediction

./: pyproject.toml  requirements.txt
src/: config.py
src/pipeline/: evaluate_market_prediction.py  get_market_data.py  pipeline.py  train_market_data.py
src/pipeline/components/: get_market_data.yaml  train_market_data.yaml
