[project]
name = "market-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "google-cloud-aiplatform (>=1.124.0,<2.0.0)",
    "kfp (>=2.14.6,<3.0.0)",
    "google-cloud-pipeline-components (>=2.21.0,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "market_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
